wrote the header aand the main section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Accessibility Web</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Accessibility Web</title>
+	</head>
+	<body>
+		<header>
+			<div class="wrap">
+				<h1 class="header-logo">Logo</h1>
+			</div>
+			<nav>
+				<ul>
+					<li>
+						<a href="#">Home</a>
+					</li>
+					<li>
+						<a href="#">About</a>
+					</li>
+					<li>
+						<a href="#">Contact</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<section class="intro">
+				<div class="wrap wrap-column wrap-centre">
+					<header>
+						<h1>Welcome</h1>
+					</header>
+					<img
+						src="./images/christimas.jpg"
+						alt="table decorated for christimas lunch "
+						class="intro-image"
+					/>
+					<p class="intro-text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+						ipsam labore impedit, provident porro ratione dolorem voluptates
+						perferendis eos commodi dolore sit mollitia, quos, ab facilis
+						quaerat asperiores! At, odio.
+					</p>
+				</div>
+			</section>
+            <section class="find-out-more"></section>
+		</main>
+	</body>
 </html>
