finished the html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,86 @@
 					</p>
 				</div>
 			</section>
-            <section class="find-out-more"></section>
+			<section class="find-out-more">
+				<h2>Find out more</h2>
+				<p>To read more about the topic, please click on the link below</p>
+				<a
+					href="#"
+					class="text-anchor"
+					target="_blank"
+					aria-label="Read more about Christimas lunch table deco"
+					>Read More (opens in new window)</a
+				>
+			</section>
+			<section>
+				<div class="wrap wrap-column">
+					<h3>Contact me</h3>
+					<p>Please fill in the below form</p>
+					<form action="">
+						<p>All fields marked with * are required</p>
+						<div class="form-group">
+							<label for="name">Name *</label>
+							<input
+								type="text"
+								name=""
+								id="name"
+								placeholder="Enter Name"
+								required
+							/>
+						</div>
+						<div class="form-group">
+							<label for="email">Email *</label>
+							<input
+								type="email"
+								name=""
+								id="email"
+								placeholder="Email"
+								required
+							/>
+						</div>
+						<div class="form-group">
+							<fieldset>
+								<legend>Nature of enquiry</legend>
+								<div>
+									<input
+										type="checkbox"
+										name="enquiry"
+										id="christimas-lunch"
+									/>
+									<label for="christimas-lunch">About Christimas deco</label>
+								</div>
+									<div>
+									<input
+										type="checkbox"
+										name="enquiry"
+										id="table-deco"
+									/>
+									<label for="table-deco">About Christimas lunch</label>
+								</div>
+									<div>
+									<input
+										type="checkbox"
+										name="enquiry"
+										id="other-enquiry"
+									/>
+									<label for="other-enquiry">About any other enquiry</label>
+								</div>
+							</fieldset>
+						</div>
+						<div class="form-group">
+							<label for="message"> Message</label>
+							<textarea name="" id="message"  rows="10"></textarea>
+						</div>
+						<button type="submit">Submit</button>
+					</form>
+				</div>
+			</section>
 		</main>
+
+		<footer>
+			<div class="wrap">
+				<small>&copy; Copyright Mamosebetsi Kekae 2023</small>
+			</div>
+		</footer>
 	</body>
 </html>
